Fix search visibility

--- a/src/scss/components/_pizza-block.scss
+++ b/src/scss/components/_pizza-block.scss
@@ -90,7 +90,7 @@
     }
 
     &__bottom {
-      margin-top: 10px;
+      margin-top: 0px;
       flex-direction: column;
     }
   }
